--- a/assets/style/morotskakastyle.css
+++ b/assets/style/morotskakastyle.css
@@ -100,7 +100,7 @@ a:visited{
 	animation-duration: 1s;
 	animation-delay: 0s;
 	animation-iteration-count:1;
-	animation-name:name;	
+	animation-name: ;	
 }
 .stars{
 	border: none;
